--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.MainActivity">
+    android:background="@android:color/darker_gray"
+    tools:context=".activity.MainActivity">
 
     <EditText
         android:id="@+id/et_request"
@@ -32,25 +33,37 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/et_request" />
 
-    <ScrollView
+    <android.support.v7.widget.RecyclerView
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_margin="8dp"
-        app:layout_constraintBottom_toTopOf="@id/container"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:id="@+id/rv_photos"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/button_search"
-        app:layout_constraintVertical_bias="0.0"
-        app:layout_constraintVertical_weight="1">
+        app:layout_constraintBottom_toTopOf="@id/container"
+        android:layout_margin="8dp">
 
-        <TextView
-            android:id="@+id/tv_result"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingStart="8dp"
-            android:paddingEnd="8dp"
-            android:textSize="18sp" />
-    </ScrollView>
+    </android.support.v7.widget.RecyclerView>
+
+    <!--<ScrollView-->
+        <!--android:layout_width="0dp"-->
+        <!--android:layout_height="0dp"-->
+        <!--android:layout_margin="8dp"-->
+        <!--app:layout_constraintBottom_toTopOf="@id/container"-->
+        <!--app:layout_constraintEnd_toEndOf="parent"-->
+        <!--app:layout_constraintStart_toStartOf="parent"-->
+        <!--app:layout_constraintTop_toBottomOf="@id/button_search"-->
+        <!--app:layout_constraintVertical_bias="0.0"-->
+        <!--app:layout_constraintVertical_weight="1">-->
+
+        <!--<TextView-->
+            <!--android:id="@+id/tv_result"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:paddingStart="8dp"-->
+            <!--android:paddingEnd="8dp"-->
+            <!--android:textSize="18sp" />-->
+    <!--</ScrollView>-->
 
     <LinearLayout
         android:id="@+id/container"
