--- a/app/src/main/res/layout/activity_recent.xml
+++ b/app/src/main/res/layout/activity_recent.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.RecentActivity">
+    tools:context=".activity.RecentActivity">
 
     <TextView
         android:id="@+id/tv_recent_header"
@@ -20,25 +20,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ScrollView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_recent_photos"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_margin="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_recent_header"
-        app:layout_constraintVertical_bias="0.0"
-        app:layout_constraintVertical_weight="1">
-
-
-        <TextView
-            android:id="@+id/tv_recent"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:textSize="16sp" />
-
-    </ScrollView>
+        app:layout_constraintTop_toBottomOf="@id/tv_recent_header" />
 
 </android.support.constraint.ConstraintLayout>
