--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -24,7 +24,7 @@
         android:layout_centerHorizontal="true"
         android:layout_margin="16dp"
         android:background="@drawable/btn_login"
-        android:onClick="login"
+        android:onClick="signUp"
         android:text="@string/btn_login"
         android:textSize="20sp" />
 
