--- a/app/src/main/res/layout/favourites_header.xml
+++ b/app/src/main/res/layout/favourites_header.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -14,7 +14,7 @@
         android:paddingStart="8dp"
         android:paddingEnd="8dp"
         android:textColor="@android:color/black"
-        android:textSize="30sp"
+        android:textSize="26sp"
         android:textStyle="italic" />
 
-</android.support.v7.widget.CardView>
+</androidx.cardview.widget.CardView>
