--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/darker_gray"
     tools:context=".activity.MainActivity">
 
     <EditText
@@ -25,6 +24,7 @@
         android:id="@+id/button_search"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/white_background"
         android:onClick="search"
         android:text="@string/btn_name"
         android:textSize="16sp"
@@ -40,45 +40,57 @@
         app:layout_constraintBottom_toTopOf="@id/container"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/button_search">
-
-    </androidx.recyclerview.widget.RecyclerView>
+        app:layout_constraintTop_toBottomOf="@id/button_search" />
 
     <LinearLayout
         android:id="@+id/container"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_margin="8dp"
+        android:background="@drawable/white_background"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
-        <Button
+        <ImageButton
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_margin="2dp"
             android:layout_weight="1"
+            android:background="@drawable/button_background"
             android:onClick="openRecentPhotoList"
-            android:text="@string/btn_recent"
-            android:textSize="14sp" />
+            android:scaleType="fitCenter"
+            android:src="@drawable/photos_recent" />
 
-        <Button
+        <ImageButton
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_margin="2dp"
             android:layout_weight="1"
+            android:background="@drawable/button_background"
             android:onClick="openMap"
-            android:text="@string/btn_map"
-            android:textSize="14sp" />
+            android:scaleType="fitCenter"
+            android:src="@drawable/map" />
 
-        <Button
+        <ImageButton
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_margin="2dp"
             android:layout_weight="1"
+            android:background="@drawable/button_background"
+            android:onClick="openGallery"
+            android:scaleType="fitCenter"
+            android:src="@drawable/gallery" />
+
+        <ImageButton
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_margin="2dp"
+            android:layout_weight="1"
+            android:background="@drawable/button_background"
             android:onClick="openFavouritePhotoList"
-            android:text="@string/btn_favourites"
-            android:textSize="14sp" />
-
+            android:scaleType="fitCenter"
+            android:src="@drawable/photos_favourites" />
     </LinearLayout>
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
