--- a/app/src/main/res/layout/favourite_photo_item.xml
+++ b/app/src/main/res/layout/favourite_photo_item.xml
@@ -16,6 +16,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:layout_toStartOf="@id/btn_remove_item">
+
             <ImageView
                 android:id="@+id/iv_favourite_photo"
                 android:layout_width="200dp"
@@ -32,7 +33,9 @@
             android:layout_alignBottom="@id/photo_container"
             android:layout_alignParentEnd="true"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
+            android:background="@drawable/button_background"
             android:src="@drawable/ic_delete" />
 
     </RelativeLayout>
