--- a/app/src/main/res/layout/username_item.xml
+++ b/app/src/main/res/layout/username_item.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardCornerRadius="8dp"
+    app:cardElevation="4dp"
     android:layout_margin="4dp">
 
     <TextView
