--- a/app/src/main/res/layout/activity_recent.xml
+++ b/app/src/main/res/layout/activity_recent.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.RecentActivity">
+    tools:context=".recent.RecentActivity">
 
     <TextView
         android:id="@+id/tv_recent_header"
