--- a/app/src/main/res/layout/activity_recent.xml
+++ b/app/src/main/res/layout/activity_recent.xml
@@ -6,21 +6,21 @@
     android:layout_height="match_parent"
     tools:context=".recent.RecentActivity">
 
-    <TextView
-        android:id="@+id/tv_recent_header"
-        android:layout_width="wrap_content"
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/recent_bar_container"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:background="@drawable/white_background"
-        android:padding="6dp"
-        android:text="@string/tv_recent_header"
-        android:textAllCaps="true"
-        android:textColor="@android:color/black"
-        android:textSize="24sp"
-        android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/recent_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:title="@string/activity_recent" />
+
+    </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_recent_photos"
@@ -30,6 +30,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_recent_header" />
+        app:layout_constraintTop_toBottomOf="@id/recent_bar_container" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
