--- a/app/src/main/res/drawable/white_background.xml
+++ b/app/src/main/res/drawable/white_background.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@android:color/white" />
+    <solid android:color="?attr/colorSurface" />
     <corners android:radius="16dp" />
-    <stroke android:color="@android:color/black"
+    <stroke android:color="?attr/colorPrimaryDark"
         android:width="1dp" />
 </shape>
