--- a/app/src/main/res/layout/activity_photo.xml
+++ b/app/src/main/res/layout/activity_photo.xml
@@ -8,11 +8,10 @@
 
     <TextView
         android:id="@+id/tv_search_info"
+        android:textAppearance="@style/TextAppearance.PhotoSearch.Title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:textColor="@android:color/black"
-        android:textSize="32sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -22,63 +21,20 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_margin="8dp"
-        app:layout_constraintBottom_toTopOf="@id/container"
+        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_search_info"
-        app:layout_constraintVertical_weight="1"/>
-    <!--<WebView-->
-        <!--android:id="@+id/web_view"-->
-        <!--android:layout_width="0dp"-->
-        <!--android:layout_height="0dp"-->
-        <!--android:layout_margin="8dp"-->
-        <!--android:padding="8dp"-->
-        <!--app:layout_constraintBottom_toTopOf="@id/container"-->
-        <!--app:layout_constraintEnd_toEndOf="parent"-->
-        <!--app:layout_constraintStart_toStartOf="parent"-->
-        <!--app:layout_constraintTop_toBottomOf="@+id/tv_search_info"-->
-        <!--app:layout_constraintVertical_weight="1" />-->
+        app:layout_constraintVertical_weight="1" />
 
-    <LinearLayout
-        android:id="@+id/container"
-        android:layout_width="0dp"
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        style="@style/Widget.PhotoSearch.BottomNavigationView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/photo_view_bottom_menu" />
 
-
-        <ImageButton
-            android:id="@+id/btn_add_to_favourite"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@drawable/button_background"
-            android:onClick="addToFavourites"
-            android:src="@drawable/ic_favorite"
-            tools:ignore="ContentDescription" />
-
-        <ImageButton
-            android:id="@+id/btn_remove"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@drawable/button_background"
-            android:onClick="removeFromFavourites"
-            android:src="@drawable/ic_delete"
-            tools:ignore="ContentDescription" />
-
-        <ImageButton
-            android:id="@+id/btn_download"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@drawable/button_background"
-            android:onClick="downloadImage"
-            android:src="@drawable/ic_file_download"
-            tools:ignore="ContentDescription" />
-
-    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
