--- a/app/src/main/res/layout/favourites_header.xml
+++ b/app/src/main/res/layout/favourites_header.xml
@@ -1,20 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    style="@style/Widget.PhotoSearch.CardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
-    app:cardCornerRadius="8dp">
+    android:layout_margin="8dp">
 
     <TextView
         android:id="@+id/tv_favourites_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:paddingStart="8dp"
-        android:paddingEnd="8dp"
-        android:textColor="@android:color/black"
-        android:textSize="26sp"
-        android:textStyle="italic" />
+        android:textAppearance="@style/TextAppearance.PhotoSearch.CardText" />
 
-</androidx.cardview.widget.CardView>
+</com.google.android.material.card.MaterialCardView>
