--- a/app/src/main/res/layout/gallery_item.xml
+++ b/app/src/main/res/layout/gallery_item.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="2dp">
+    android:layout_margin="2dp"
+    android:elevation="0dp"
+    app:cardPreventCornerOverlap="true">
 
     <ImageView
         android:id="@+id/iv_gallery_image"
@@ -11,4 +13,4 @@
         android:layout_height="120dp"
         android:scaleType="centerCrop" />
 
-</RelativeLayout>
+</com.google.android.material.card.MaterialCardView>
