--- a/app/src/main/res/layout/photo_item.xml
+++ b/app/src/main/res/layout/photo_item.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    style="@style/Widget.PhotoSearch.CardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
-    app:cardCornerRadius="8dp">
+    android:layout_margin="8dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -15,10 +14,10 @@
             android:id="@+id/iv_photo"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:layout_margin="8dp"
             android:scaleType="centerCrop" />
 
         <TextView
+            android:textAppearance="@style/TextAppearance.PhotoSearch.CardText"
             android:id="@+id/tv_request_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -26,10 +25,7 @@
             android:layout_centerVertical="true"
             android:layout_marginEnd="16dp"
             android:layout_toEndOf="@id/iv_photo"
-            android:textAlignment="center"
-            android:textColor="@android:color/black"
-            android:textSize="20sp"
-            android:textStyle="italic" />
+            android:textAlignment="center" />
 
     </RelativeLayout>
-</androidx.cardview.widget.CardView>
+</com.google.android.material.card.MaterialCardView>
