--- a/app/src/main/res/layout/username_item.xml
+++ b/app/src/main/res/layout/username_item.xml
@@ -1,21 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    style="@style/Widget.PhotoSearch.CardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="8dp"
-    app:cardElevation="4dp"
     android:layout_margin="4dp">
 
     <TextView
         android:id="@+id/tv_username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingStart="8dp"
         android:layout_gravity="center_horizontal"
+        android:paddingStart="8dp"
         android:paddingEnd="8dp"
-        android:textColor="@android:color/black"
-        android:textSize="30sp"
-        android:textStyle="italic" />
+        android:textAppearance="@style/TextAppearance.PhotoSearch.CardText"/>
 
-</androidx.cardview.widget.CardView>
+</com.google.android.material.card.MaterialCardView>
