--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,6 +10,7 @@
         <item name="android:textColor">@android:color/black</item>
         <item name="itemIconTint">@android:color/black</item>
         <item name="android:textColorPrimary">@android:color/black</item>
+        <item name="android:windowTranslucentStatus">true</item>
     </style>
 
     <style name="Theme.PhotoSearch.Dark" parent="Theme.MaterialComponents.NoActionBar">
@@ -21,6 +22,7 @@
         <item name="android:textColor">@android:color/white</item>
         <item name="itemIconTint">@android:color/white</item>
         <item name="android:textColorPrimary">@android:color/white</item>
+        <item name="android:windowTranslucentStatus">true</item>
     </style>
 
     <style name="Theme.PhotoSearch.DayNight" parent="Theme.PhotoSearch.Light" />
